# pyfx_utils

./: .gitignore  __init__.py  ipyext.py  pyproject.toml
analysis/: __init__.py  augment.py  interfaces.py  perf.py  regime.py  tuning.py
backtests/: __init__.py  core.py  metrics.py  signal.py
indicators/: __init__.py  ta.py
notebooks/: pyfx_utils_tester.ipynb
pyfx_utils/: __init__.py  colab_boot.py
pyfx_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyfx_utils/analysis/: __init__.py  augment.py  interfaces.py  regime.py  tuning.py  walkforward.py
pyfx_utils/backtests/: __init__.py  core.py  metrics.py  signal.py
pyfx_utils/indicators/: __init__.py  features.py
pyfx_utils/strategies/: __init__.py  rsi.py  sma.py
pyfx_utils/utils/: __init__.py  loaders.py  stats.py  time.py
pyfx_utils/viz/: curves.py
tests/analysis/: test_augment.py  test_interfaces.py
tests/backtests/: test_metrics.py  test_signal.py
tests/indicators/: test_indicators_generic.py
tests/package/: test_smoke_imports.py
tests/strategies/: test_rsi.py  test_sma_adapter.py  test_sma_crossover.py
tests/utils/: test_stats.py  test_time.py
utils/: stats.py  time.py
viz/: __init__.py  lwcharts.py  visualization.py
